added filtering and display of signal status to QA

--- a/apollo/frontend/templates/frontend/macros/quality_assurance_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/quality_assurance_list_filter.html
@@ -15,11 +15,14 @@
                 <div class="col-md-4 mb-2">
                     {{ filter_form.quality_check.criterion(class_='form-control custom-select') }}
                 </div>
-                <div class="col-md-4 mb-2">
+                <div class="col-md-2 mb-2">
                     {{ filter_form.quality_check.condition(class_='form-control custom-select') }}
                 </div>
                 <div class="col-md-2 mb-2">
                     {{ filter_form.quarantine_status(class_='form-control custom-select') }}
+                </div>
+                <div class="col-md-2 mb-2">
+                    {{ filter_form.online_status(class_='form-control custom-select') }}
                 </div>
                 <div class="col-md-2 mb-2">
                     <div class="d-flex flex-row">
