--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -173,7 +173,7 @@
       </tr>
       <tr>
         <td colspan="2" style="vertical-align: middle">
-          <h4>{{ _('Offline?') }}</h4>
+          <h4>{{ _('No Signal') }}</h4>
         </td>
         {%- if readonly -%}
         <td class="obs-on">{{ render_submission_field(submission_form['unreachable'], disabled=1)}}</td>
