fix: change title of user menu from Profile to Settings #349

--- a/apollo/frontend/templates/frontend/layout.html
+++ b/apollo/frontend/templates/frontend/layout.html
@@ -80,7 +80,7 @@
                         <li class="nav-item"><a class="nav-link disabled" href="">{{ g.event.name }}</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">Profile</a>
+                                aria-expanded="false">{{ _('Settings') }}</a>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item disabled" href="#">{{ current_user.email }}</a>
                                 <div class="dropdown-divider"></div>
