--- a/apollo/frontend/templates/frontend/participant_performance_detail.html
+++ b/apollo/frontend/templates/frontend/participant_performance_detail.html
@@ -15,7 +15,7 @@
 </tr>
 <tr>
 <th>{{ _('Phone Numbers') }}</th>
-<td>{{ participant.phones|join(', ', attribute='number') }}</td>
+<td>{{ participant.phone_contacts|join(', ', attribute='number') }}</td>
 </tr>
 <tr>
 <th>{{ _('Messages Sent') }}</th>
