--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -4,7 +4,11 @@
 {%- from 'frontend/macros/submission_list_macros.html' import submission_header, submission_items -%}
 {%- from 'frontend/macros/send_message.html' import send_message_modal -%}
 
+{% block stylesheets %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-switch-button.min.css') }}">
+{% endblock %}
 {% block scripts -%}
+<script src="{{ url_for('static', filename='js/bootstrap-switch-button.min.js') }}"></script>
 <script type="text/javascript">
 $(function () {
 	$('#filter_reset').on('click', function() {
