--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -116,7 +116,7 @@
     {%- elif status == 'rejected' -%}
     <i class="fa fa-circle text-danger" aria-hidden="true" title="{{ _('Rejected') }}"></i>
     {%- elif status == 'citizen' -%}
-    <i class="fa fa-users text-warming" aria-hidden="true" title="{{ _('Citizen Report') }}"></i>
+    <i class="fa fa-users text-primary" aria-hidden="true" title="{{ _('Citizen Report') }}"></i>
     {%- else -%}
     <i class="fa fa-exclamation-triangle text-warning" aria-hidden="true" title="{{ _('Unmarked') }}"></i>
     {%- endif -%}
