--- a/apollo/frontend/templates/frontend/layout.html
+++ b/apollo/frontend/templates/frontend/layout.html
@@ -29,7 +29,7 @@
     <!-- End Google Tag Manager -->
     {%- endif %}
   </head>
-  <body style="overflow-y: scroll">
+  <body style="overflow-y: scroll" class="pb-4 mb-5">
     {%- if not debug and gtm_key %}
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ gtm_key }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -103,32 +103,37 @@
         </div>
     </nav>
 
-    <div class="container mt-2">
-        <div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row mb-n2">
-            <nav class="nav mb-2" aria-label="breadcrumb">
-                <ol class="breadcrumb mb-n2">
-                    {% block title -%}
-                    {% for breadcrumb in breadcrumbs %}
-                    <li class="breadcrumb-item {%- if loop.last %} active{% endif %}" {%- if loop.last %} aria-current="page"{% endif %}>{{ breadcrumb }}</li>
-                    {% endfor %}
-                    {%- endblock %}
-                </ol>
-            </nav>
-            <div class="d-flex justify-content-between align-items-start flex-column flex-md-row">
-                {% block toolbar %}{% endblock %}
+    <main role="main">
+        <div class="container mt-2">
+            <div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row mb-n2">
+                <nav class="nav mb-2" aria-label="breadcrumb">
+                    <ol class="breadcrumb mb-n2">
+                        {% block title -%}
+                        {% for breadcrumb in breadcrumbs %}
+                        <li class="breadcrumb-item {%- if loop.last %} active{% endif %}" {%- if loop.last %} aria-current="page"{% endif %}>{{ breadcrumb }}</li>
+                        {% endfor %}
+                        {%- endblock %}
+                    </ol>
+                </nav>
+                <div class="d-flex justify-content-between align-items-start flex-column flex-md-row">
+                    {% block toolbar %}{% endblock %}
+                </div>
+            </div>
+
+            <div class="card mt-3 border-0">
+{%- block content -%}{%- endblock %}
             </div>
         </div>
+    </main>
 
-        <div class="card mt-3 border-0">
-            {% block content %}{% endblock %}
-        </div>
-
-        <footer class="py-3">
-            <div class="d-flex justify-content-start mt-0 pt-3">
+    <footer class="footer mt-auto py-1 fixed-bottom bg-white">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between mt-0 pt-3">
                 <p class="small text-muted" data-config-id="copyright">Apollo v{{ config.VERSION }} &mdash; Built with <span class="text-danger">&hearts;</span> from Lagos</p>
+                {% block footer -%}{%- endblock %}
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 
     {% if g.locale.text_direction == 'rtl' -%}
     <script type="text/javascript" src="{{ asset_url_for('scripts-rtl.js') }}" charset="utf-8"></script>
