--- a/apollo/templates/admin/layout.html
+++ b/apollo/templates/admin/layout.html
@@ -19,34 +19,26 @@
       {%- if children %}
         {% set class_name = item.get_class_name() %}
         {%- if item.is_active(admin_view) %}
-        <li class="active dropdown{% if class_name %} {{class_name}}{% endif %}">
+        <li class="nav-item active dropdown{% if class_name %} {{class_name}}{% endif %}">
         {% else -%}
-        <li class="dropdown{% if class_name %} {{class_name}}{% endif %}">
+        <li class="nav-item dropdown{% if class_name %} {{class_name}}{% endif %}">
         {%- endif %}
-          <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">{{ menu_icon(item) }}{{ item.name }}<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-          {%- for child in children -%}
-            {% set class_name = child.get_class_name() %}
-            {%- if child.is_active(admin_view) %}
-            <li class="active{% if class_name %} {{class_name}}{% endif %}">
-            {% else %}
-            <li{% if class_name %} class="{{class_name}}"{% endif %}>
-            {%- endif %}
-              <a href="{{ child.get_url() }}">{{ menu_icon(child) }}{{ child.name }}</a>
-            </li>
-          {%- endfor %}
-          </ul>
+          <div class="dropdown-menu">
+            {%- for child in children -%}
+            <a class="dropdown-item" href="{{ child.get_url() }}">{{ menu_icon(child) }}{{ child.name }}</a>
+            {%- endfor %}
+          </div>
         </li>
       {% endif %}
     {%- else %}
       {%- if item.is_accessible() and item.is_visible() -%}
         {% set class_name = item.get_class_name() %}
         {%- if item.is_active(admin_view) %}
-        <li class="active{% if class_name %} {{class_name}}{% endif %}">
+        <li class="nav-item active{% if class_name %} {{class_name}}{% endif %}">
         {%- else %}
-        <li{% if class_name %} class="{{class_name}}"{% endif %}>
+        <li class="nav-item {%- if class_name %} {{class_name}}{% endif %}">
         {%- endif %}
-          <a href="{{ item.get_url() }}">{{ menu_icon(item) }}{{ item.name }}</a>
+          <a class="nav-link" href="{{ item.get_url() }}">{{ menu_icon(item) }}{{ item.name }}</a>
         </li>
       {%- endif -%}
     {% endif -%}
@@ -56,8 +48,8 @@
 {% macro menu_links() %}
   {% for item in admin_view.admin.menu_links() %}
     {% if item.is_accessible() and item.is_visible() %}
-      <li>
-        <a href="{{ item.get_url() }}">{{ menu_icon(item) }}{{ item.name }}</a>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ item.get_url() }}">{{ menu_icon(item) }}{{ item.name }}</a>
       </li>
     {% endif %}
   {% endfor %}
@@ -72,8 +64,10 @@
         {% else %}
         <div class="alert">
         {% endif %}
-          <a href="javascript:void(0)" class="close" data-dismiss="alert">x</a>
           {{ m }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
       {% endfor %}
     {% endif %}
